--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "test-gsp-project",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node build/build.js",
-    "release": "node build/release.js"
+    "build": "npm run lint && node build/build.js",
+    "release": "node build/release.js",
+    "lint": "eslint --ext .ts src",
+    "prepare": "husky",
+    "test": "echo 放弃 commit 提交 && exit 2"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +18,20 @@
     "@types/node": "^20.11.27",
     "@types/semver": "^7.5.8",
     "@types/shelljs": "^0.8.15",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
     "chalk": "^4.1.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
     "fs-extra": "^11.2.0",
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5",
     "semver": "^7.6.0",
     "shelljs": "^0.8.5",
+    "simple-git": "^3.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
