--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "fs-extra": "^11.2.0",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "semver": "^7.6.0",
     "shelljs": "^0.8.5",
