--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "release": "node build/release.js",
     "lint": "eslint --ext .ts src",
     "prepare": "husky",
-    "test": "echo 放弃 commit 提交 && exit 2"
+    "test": "echo 放弃 commit 提交 && exit 2",
+    "cz": "git cz"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "chalk": "^4.1.2",
+    "commitizen": "^4.3.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
