--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^19.1.0",
+    "@commitlint/config-conventional": "^19.1.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.27",
     "@types/semver": "^7.5.8",
@@ -22,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "chalk": "^4.1.2",
     "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
@@ -37,5 +40,10 @@
     "simple-git": "^3.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
