--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .ts src",
     "prepare": "husky",
     "test": "echo 放弃 commit 提交 && exit 2",
-    "cz": "git cz"
+    "cz": "git cz",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "chalk": "^4.1.2",
     "commitizen": "^4.3.0",
+    "conventional-changelog-cli": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
